test_output.txt

BSTTests.hs:51:10: error: [GHC-88464]
    Variable not in scope: displayEntries :: BST Int String -> String
   |
51 |         (displayEntries (empty :: BST Int String)))
   |          ^^^^^^^^^^^^^^
